# cmake-medium-example

./: README.md
src/: CMakeLists.txt
src/exec/: CMakeLists.txt  main.c
src/include/: foo_config.h.in  utilities.h
src/lib/: CMakeLists.txt  foo.c  foo.h
